--- a/ildolcefarniente/index.html
+++ b/ildolcefarniente/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Introducir nuevo plato</a>
+                    <a href="nuevo.php">Introducir nuevo plato</a>
                 </li>
                 <li>
                     <a href="#">Modificar platos</a>
